force-app/main/default/objects/Notice_to_Proceed__c/Notice_to_Proceed__c.object-meta.xml
<CustomObject>
    <description>The notice from the Leasing team to the Deconstruction team to begin deconstruction on the site.</description>
    <label>Notice to Proceed</label>
    <nameField>
        <label>Notice to Proceed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notices to Proceed</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>