force-app/main/default/objects/Notice_to_Proceed__c/fields/Cabinet_Combination__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_Combination__c</fullName>
    <label>Cabinet Combination</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>