force-app/main/default/objects/Notice_to_Proceed__c/fields/Code_or_Key_Instructions_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Code_or_Key_Instructions_if_applicable__c</fullName>
    <label>Code or Key Instructions (if applicable)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>