force-app/main/default/objects/Notice_to_Proceed__c/fields/Conga_Template_ID_for_harvest_site__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template_ID_for_harvest_site__c</fullName>
    <formula>IF(Harvest_Site__c, &quot;a1z5G00000I3g49QAB&quot;,&quot;a1z5G00000DOZx6QAH&quot;)</formula>
    <inlineHelpText>Used for conga grid to update harvest site ntps</inlineHelpText>
    <label>Conga Template ID for harvest site</label>
    <type>Text</type>
</CustomField>