force-app/main/default/objects/Notice_to_Proceed__c/fields/Construction_Dates_Notes__c.field-meta.xml
<CustomField>
    <fullName>Construction_Dates_Notes__c</fullName>
    <label>Construction Dates Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>