force-app/main/default/objects/Notice_to_Proceed__c/fields/Decon_Project_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Decon_Project_Manager_Email__c</fullName>
    <formula>Site_Deconstruction__r.PM_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decon Project Manager Email</label>
    <type>Text</type>
</CustomField>