force-app/main/default/objects/Notice_to_Proceed__c/fields/Divestiture_Site__c.field-meta.xml
<CustomField>
    <fullName>Divestiture_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Divestiture Site</label>
    <referenceTo>Divestiture_Site__c</referenceTo>
    <relationshipLabel>Notices to Proceed</relationshipLabel>
    <relationshipName>Notices_to_Proceed</relationshipName>
    <type>Lookup</type>
</CustomField>