force-app/main/default/objects/Notice_to_Proceed__c/fields/Do_Not_Deconstruct_Before_Leasing__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Deconstruct_Before_Leasing__c</fullName>
    <label>Do Not Deconstruct Before (Leasing)</label>
    <type>Date</type>
</CustomField>