force-app/main/default/objects/Notice_to_Proceed__c/fields/DX_Type__c.field-meta.xml
<CustomField>
    <fullName>DX_Type__c</fullName>
    <formula>TEXT(Site_Deconstruction__r.DX_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Filled from the Site Deconstruction Record</inlineHelpText>
    <label>DX Type</label>
    <type>Text</type>
</CustomField>