force-app/main/default/objects/Notice_to_Proceed__c/fields/Exceptions_any_applicable__c.field-meta.xml
<CustomField>
    <fullName>Exceptions_any_applicable__c</fullName>
    <label>Exceptions (any applicable)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Antenna Mounts</fullName>
            </value>
            <value>
                <fullName>Backup Power Harvest</fullName>
            </value>
            <value>
                <fullName>Cabinet Harvest (back to NTM)</fullName>
            </value>
            <value>
                <fullName>Concrete Removal (implied if full deconstruction)</fullName>
            </value>
            <value>
                <fullName>Crane Lifts (if known)</fullName>
            </value>
            <value>
                <fullName>Fuel Cell System</fullName>
            </value>
            <value>
                <fullName>Generator &amp; Fuel Storage Tank</fullName>
            </value>
            <value>
                <fullName>Use of LL Contractors (e.g. Transmission towers, utility towers, ROW)</fullName>
            </value>
            <value>
                <fullName>Shelter Removal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>