force-app/main/default/objects/Notice_to_Proceed__c/fields/Gate_Combination__c.field-meta.xml
<CustomField>
    <fullName>Gate_Combination__c</fullName>
    <label>Gate Combination</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>