force-app/main/default/objects/Notice_to_Proceed__c/fields/General_Contractor__c.field-meta.xml
<CustomField>
    <fullName>General_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notices to Proceed</relationshipLabel>
    <relationshipName>Notices_to_Proceed</relationshipName>
    <type>Lookup</type>
</CustomField>