force-app/main/default/objects/Notice_to_Proceed__c/fields/Harvest_Site__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Site__c</fullName>
    <formula>Site_Deconstruction__r.Harvest_Site__c</formula>
    <inlineHelpText>Populated from related deconstruction record. Also shows different print to gc option for harvest sites.</inlineHelpText>
    <label>Harvest Site</label>
    <type>Checkbox</type>
</CustomField>