force-app/main/default/objects/Notice_to_Proceed__c/fields/Landlord_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Entity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Landlord Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Cell_Site_Landlord__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notices to Proceed (Landlord Entity Name)</relationshipLabel>
    <relationshipName>Notices_to_ProceedLL</relationshipName>
    <type>Lookup</type>
</CustomField>