force-app/main/default/objects/Notice_to_Proceed__c/fields/Lat_Long__c.field-meta.xml
<CustomField>
    <fullName>Lat_Long__c</fullName>
    <formula>TEXT(Divestiture_Site__r.Lat_Long__Latitude__s)  &amp; &quot;,&quot; &amp;  Text(Divestiture_Site__r.Lat_Long__Longitude__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lat/Long</label>
    <type>Text</type>
</CustomField>