force-app/main/default/objects/Notice_to_Proceed__c/fields/Lease_Abstract__c.field-meta.xml
<CustomField>
    <fullName>Lease_Abstract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease Abstract</label>
    <referenceTo>Lease_Abstract__c</referenceTo>
    <relationshipLabel>Notices to Proceed</relationshipLabel>
    <relationshipName>Notices_to_Proceed</relationshipName>
    <type>Lookup</type>
</CustomField>