force-app/main/default/objects/Notice_to_Proceed__c/fields/LL_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>LL_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LL Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notices to Proceed</relationshipLabel>
    <relationshipName>Notices_to_Proceed</relationshipName>
    <type>Lookup</type>
</CustomField>