force-app/main/default/objects/Notice_to_Proceed__c/fields/LL_Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>LL_Primary_Contact_Name__c</fullName>
    <formula>LL_Primary_Contact__r.FirstName  &amp; &quot; &quot;  &amp;  LL_Primary_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LL  Primary Contact Name</label>
    <type>Text</type>
</CustomField>