force-app/main/default/objects/Notice_to_Proceed__c/fields/LL_Primary_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>LL_Primary_Contact_Phone__c</fullName>
    <formula>LL_Primary_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LL Primary Phone</label>
    <type>Text</type>
</CustomField>