force-app/main/default/objects/Notice_to_Proceed__c/fields/LL_Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>LL_Primary_Email__c</fullName>
    <formula>LL_Primary_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LL Primary Email</label>
    <type>Text</type>
</CustomField>