force-app/main/default/objects/Notice_to_Proceed__c/fields/LL_Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>LL_Secondary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LL Secondary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notices to Proceed (LL Secondary Contact)</relationshipLabel>
    <relationshipName>Notices_to_Proceed1</relationshipName>
    <type>Lookup</type>
</CustomField>