force-app/main/default/objects/Notice_to_Proceed__c/fields/LL_Secondary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>LL_Secondary_Contact_Email__c</fullName>
    <formula>LL_Secondary_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LL Secondary Contact Email</label>
    <type>Text</type>
</CustomField>