force-app/main/default/objects/Notice_to_Proceed__c/fields/LL_Secondary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>LL_Secondary_Contact_Name__c</fullName>
    <formula>LL_Secondary_Contact__r.FirstName  &amp; &quot; &quot;  &amp;   LL_Secondary_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LL Secondary Contact Name</label>
    <type>Text</type>
</CustomField>