force-app/main/default/objects/Notice_to_Proceed__c/fields/LL_Secondary_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>LL_Secondary_Contact_Phone__c</fullName>
    <formula>LL_Secondary_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LL Secondary Contact Phone</label>
    <type>Text</type>
</CustomField>