force-app/main/default/objects/Notice_to_Proceed__c/fields/Metro_PCS_Clearwire__c.field-meta.xml
<CustomField>
    <fullName>Metro_PCS_Clearwire__c</fullName>
    <formula>Divestiture_Site__r.Metro_PCS_Clearwire__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Metro PCS / Clearwire</label>
    <type>Text</type>
</CustomField>