force-app/main/default/objects/Notice_to_Proceed__c/fields/Must_Deconstruct_by__c.field-meta.xml
<CustomField>
    <fullName>Must_Deconstruct_by__c</fullName>
    <label>Must Deconstruct by</label>
    <type>Date</type>
</CustomField>