force-app/main/default/objects/Notice_to_Proceed__c/fields/NTP_Received_from_Leasing_Team_Date__c.field-meta.xml
<CustomField>
    <fullName>NTP_Received_from_Leasing_Team_Date__c</fullName>
    <label>NTP Received from Leasing Team Date</label>
    <type>Date</type>
</CustomField>