force-app/main/default/objects/Notice_to_Proceed__c/fields/Project_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Email__c</fullName>
    <label>Decon Project Manager Email</label>
    <type>Email</type>
</CustomField>