force-app/main/default/objects/Notice_to_Proceed__c/fields/Scope_of_Work_Designation__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Work_Designation__c</fullName>
    <label>Scope of Work Designation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Radio &amp; Hazmat</fullName>
            </value>
            <value>
                <fullName>Cabinets Only</fullName>
            </value>
            <value>
                <fullName>Antennas Only</fullName>
            </value>
            <value>
                <fullName>Cabinets &amp; Antennas</fullName>
            </value>
            <value>
                <fullName>Full Deconstruction, Ground Only</fullName>
            </value>
            <value>
                <fullName>Full Deconstruction</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>