force-app/main/default/objects/Notice_to_Proceed__c/fields/Send_NTP_to_Deconstruction_Team__c.field-meta.xml
<CustomField>
    <fullName>Send_NTP_to_Deconstruction_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box will notify the PM of the Deconstruction team that the NTP is active and they should start work on the site.</inlineHelpText>
    <label>Send NTP to Deconstruction Team</label>
    <type>Checkbox</type>
</CustomField>