force-app/main/default/objects/Notice_to_Proceed__c/fields/Site_Access__c.field-meta.xml
<CustomField>
    <fullName>Site_Access__c</fullName>
    <label>Access Information (24/7 or details)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>