force-app/main/default/objects/Notice_to_Proceed__c/fields/Site_Deconstruction__c.field-meta.xml
<CustomField>
    <fullName>Site_Deconstruction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Deconstruction</label>
    <referenceTo>Site_Decommission__c</referenceTo>
    <relationshipLabel>Notices to Proceed</relationshipLabel>
    <relationshipName>Notices_to_Proceed</relationshipName>
    <type>Lookup</type>
</CustomField>