force-app/main/default/objects/Notice_to_Proceed__c/fields/Special_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Special_Conditions__c</fullName>
    <label>Special Conditions or Comments</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>