force-app/main/default/objects/Notice_to_Proceed__c/fields/Spoke_to_Landlord__c.field-meta.xml
<CustomField>
    <fullName>Spoke_to_Landlord__c</fullName>
    <label>Spoke to Landlord</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>