force-app/main/default/objects/Notice_to_Proceed__c/fields/Sprint_S_Tmobile_T__c.field-meta.xml
<CustomField>
    <fullName>Sprint_S_Tmobile_T__c</fullName>
    <formula>Divestiture_Site__r.Sprint_S_Tmobile_T__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sprint (S) / Tmobile (T)</label>
    <type>Text</type>
</CustomField>