force-app/main/default/objects/Notice_to_Proceed__c/recordTypes/Notice_to_Proceed_GC.recordType-meta.xml
<RecordType>
    <fullName>Notice_to_Proceed_GC</fullName>
    <active>true</active>
    <description>Used to send the Notice to Proceed to the General Contractor</description>
    <label>Notice to Proceed GC</label>
</RecordType>