force-app/main/default/objects/Notice_to_Proceed__c/recordTypes/Notice_to_Proceed_Standard.recordType-meta.xml
<RecordType>
    <fullName>Notice_to_Proceed_Standard</fullName>
    <active>true</active>
    <description>Used to send to the Deconstruction Team from the leasing Team</description>
    <label>Notice to Proceed Standard</label>
</RecordType>