force-app/main/default/objects/Notice_to_Proceed__c/validationRules/Instructions_for_other.validationRule-meta.xml
<ValidationRule>
    <fullName>Instructions_for_other</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
INCLUDES(Scope_of_Work_Designation__c, &apos;Others&apos;),
LEN(Special_Conditions__c) = 0)</errorConditionFormula>
    <errorDisplayField>Special_Conditions__c</errorDisplayField>
    <errorMessage>Special comments field required when selected others on scope of work</errorMessage>
</ValidationRule>