force-app/main/default/objects/Notice_to_Proceed__c/validationRules/Spoke_to_Landlord_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Spoke_to_Landlord_Required</fullName>
    <active>true</active>
    <description>Spoke_to_Landlord_Required</description>
    <errorConditionFormula>AND(ISPICKVAL(Spoke_to_Landlord__c , &quot;Yes&quot;), ISBLANK( LL_Primary_Contact__c ))</errorConditionFormula>
    <errorMessage>Please update the LL Primary Contact information with who you spoke with, including Phone and Email if available</errorMessage>
</ValidationRule>